--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Home</title>
+<title>Fruit Page</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -50,16 +50,17 @@
 		  <div class="col-md-8 col-md-offset-2">
 			<div class="home-content">
 			  <div class="home-heading">
-				<h1><em>Stak</em> HTML CSS</h1>
+				<h1><em>Tivon</em> Personal Information</h1>
 			  </div>
 			  <div class="row">
 				<div class="col-md-12">
 				  <div class="home-box-content">
 					<div class="left-text">
-					  <h4>New <em>Stacked</em> Template</h4>
-					  <p>Stacked is brought to you. Lorem ipsum dolor sit amet, consectetur adipiscing elit etiam sit amet ante vehicula, aliquam mauris in, luctus neque.</p>
+					  <h4>我的个人主页 <em>学习</em> <em>分享</em><em>交流</em></h4>
+					  <p>之所以叫梦想是要去追求，不是去做梦，是要踏实的去做。</p>
+					  <p>自己的一片天地，记录着，分享着，努力着；</p>
 					  <div class="primary-button">
-						<a href="#2">Discover More</a>
+						<a href="#2">发现更多</a>
 					  </div>
 					</div>
 					<div class="right-image">
