--- a/public/index.html
+++ b/public/index.html
@@ -50,15 +50,15 @@
 		  <div class="col-md-8 col-md-offset-2">
 			<div class="home-content">
 			  <div class="home-heading">
-				<h1><em>Tivon</em> Personal Information</h1>
+				<h1><em>Fruit</em> Page</h1>
 			  </div>
 			  <div class="row">
 				<div class="col-md-12">
 				  <div class="home-box-content">
 					<div class="left-text">
-					  <h4>我的个人主页 <em>学习</em> <em>分享</em><em>交流</em></h4>
-					  <p>之所以叫梦想是要去追求，不是去做梦，是要踏实的去做。</p>
-					  <p>自己的一片天地，记录着，分享着，努力着；</p>
+					  <h4>我的个人主页 <em>学习</em> <em>分享</em> <em>交流</em></h4>
+					  <p>之所以叫梦想是要去追求、努力，不是去做梦，是要踏实的去做。</p>
+					  <p class="text-right">自己的一片天地，记录着，分享着，努力着</p>
 					  <div class="primary-button">
 						<a href="#2">发现更多</a>
 					  </div>
