--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
 		  </div>
 		  <div class="col-md-12">
 			<div class="footer">
-			  <p>Copyright &copy; 2018.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+			  <p>Copyright &copy; 2018.fruit.page</p>
 			</div>
 		  </div>
 		</div>
